# Maya

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: docs-en
include/Maya/: core.hpp  deviceinfo.hpp  event.hpp  math.hpp  math.inl  saveio.hpp  window.hpp
include/maya/: async.hpp  audio.hpp  audiostream.hpp  color.hpp  core.hpp  dataio.hpp  deviceinfo.hpp  event.hpp  font.hpp  fragtest.hpp  math.hpp  render.hpp  renderer.hpp  shader.hpp  texture.hpp  transformation.hpp  vertexarray.hpp  window.hpp
include/maya/2d/: camera.hpp  graphics.hpp  renderer.hpp  textdisplay.hpp
include/maya/gui/: button.hpp  checkbox.hpp  graphics.hpp  label.hpp  numberscroll.hpp  panel.hpp  scrollbar.hpp  textfield.hpp
include/maya/ui/: manager.hpp
src/: async.cpp  audio.cpp  color.cpp  core.cpp  dataio.cpp  deviceinfo.cpp  font.cpp  render.cpp  renderer.cpp  saveio.cpp  shader.cpp  texture.cpp  transformation.cpp  vertexarray.cpp  window.cpp
src/2d/: 0.frag.glsl  0.vert.glsl  camera.cpp  graphics.cpp  internal.hpp  opensans.hpp  renderer.cpp  textdisplay.cpp
src/gui/: button.cpp  checkbox.cpp  graphics.cpp  label.cpp  numberscroll.cpp  panel.cpp  scrollbar.cpp  textfield.cpp
src/gui/resources/: opensans.hpp
tests/: CMakeLists.txt  basic.cpp  basic.frag.glsl  basic.vert.glsl  renderer.cpp  test.mso
